build.txt
cargo :    Compiling 
ai-core v0.1.0 (C:\Use
rs\aarus\Desktop\model
-checker\ai-core)
At line:1 char:1
+ cargo check --color 
never 2>&1 | Out-File 
-Encoding utf8 
build.txt
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~
    + CategoryInfo    
          : 
NotSpecifi    ed: (   
Compiling     
ai...hecker\ai-cor    
e):String) [], Rem    
oteException
    + 
FullyQualifiedEr    
rorId : NativeComm    
andError
 
warning: unused 
import: 
`gemini::Gemini`
 --> 
ai-core\src\ai.rs:4:24
  |
4 | use crate::provide
rs::{gemini::Gemini, 
phi::Phi};
  |                   
     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unus
ed_imports)]` (part 
of `#[warn(unused)]`) 
on by default

warning: unused 
import: `DirectML`
  --> ai-core\src\loca
l.rs:12:15
   |
12 |     ep::{CPU, 
DirectML, QNN},
   |               
^^^^^^^^

warning: `ai-core` 
(lib) generated 2 
warnings (run `cargo 
fix --lib -p ai-core` 
to apply 2 
suggestions)
    Checking 
model-checker v0.1.0 (
C:\Users\aarus\Desktop
\model-checker)
error: Failed to 
parse formatted 
segment: Expected 
Ident or Expression
  --> src\neural_engin
es.rs:27:32
   |
27 | ...s: 
"bg-surface-container 
p-8 rounded-xl flex 
flex-col gap-8 
relative 
overflow-hidden group 
{if model.status() == 
ProviderStatus::Ready 
{ \"border 
border-primary/20\" } 
else { \"\" }}",
   |       ^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^

error: Failed to 
parse formatted 
segment: Expected 
Ident or Expression
  --> src\orchestrator
.rs:61:36
   |
61 | ...s: 
"flex-shrink-0 w-64 
p-4 rounded-xl 
bg-surface-container 
border-2 flex 
flex-col gap-3 
relative 
overflow-hidden group 
{if model.status() == 
ProviderStatus::Ready 
{ 
\"border-primary/40\" 
} else { \"border-outl
ine-variant/20 
opacity-60\" }}",
   |       ^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^

warning: unused 
import: 
`ProviderStatus`
 --> src\neural_engine
s.rs:1:27
  |
1 | use 
ai_core::ai::{Models, 
ProviderStatus};
  |                   
        ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unus
ed_imports)]` (part 
of `#[warn(unused)]`) 
on by default

warning: unused 
import: 
`ProviderStatus`
 --> src\orchestrator.
rs:2:27
  |
2 | use 
ai_core::ai::{Models, 
ProviderStatus};
  |                   
        ^^^^^^^^^^^^^^

error[E0599]: no 
method named 
`inactive_class` 
found for struct `diox
us::dioxus_router::com
ponents::LinkPropsBuil
der<TypedBuilderFields
>` in the current 
scope
  --> 
src\layout.rs:53:25
   |
 6 | /     rsx! {
 7 | |         div {
 8 | |             
class: "bg-background 
text-on-surface 
font-body selection:bg
-secondary/30 
h-screen 
overflow-hidden",
...  |
52 | |                
         
active_class: 
"text-[#5D3FD3] 
bg-[#141f38] 
font-bold",
53 | |                
         
inactive_class: 
"text-[#dee5ff]/60 
hover:text-[#dee5ff] 
hover:bg-[#141f38]",
   | |________________
________-^^^^^^^^^^^^^
^
   |
help: there is a 
method `active_class` 
with a similar name
   |
53 -                  
       
inactive_class: 
"text-[#dee5ff]/60 
hover:text-[#dee5ff] 
hover:bg-[#141f38]",
53 +                  
       active_class: 
"text-[#dee5ff]/60 
hover:text-[#dee5ff] 
hover:bg-[#141f38]",
   |

error[E0599]: no 
method named 
`inactive_class` 
found for struct `diox
us::dioxus_router::com
ponents::LinkPropsBuil
der<TypedBuilderFields
>` in the current 
scope
  --> 
src\layout.rs:67:25
   |
 6 | /     rsx! {
 7 | |         div {
 8 | |             
class: "bg-background 
text-on-surface 
font-body selection:bg
-secondary/30 
h-screen 
overflow-hidden",
...  |
66 | |                
         
active_class: 
"text-[#5D3FD3] 
bg-[#141f38] 
font-bold",
67 | |                
         
inactive_class: 
"text-[#dee5ff]/60 
hover:text-[#dee5ff] 
hover:bg-[#141f38]",
   | |________________
________-^^^^^^^^^^^^^
^
   |
help: there is a 
method `active_class` 
with a similar name
   |
67 -                  
       
inactive_class: 
"text-[#dee5ff]/60 
hover:text-[#dee5ff] 
hover:bg-[#141f38]",
67 +                  
       active_class: 
"text-[#dee5ff]/60 
hover:text-[#dee5ff] 
hover:bg-[#141f38]",
   |

error[E0599]: no 
method named 
`inactive_class` 
found for struct `diox
us::dioxus_router::com
ponents::LinkPropsBuil
der<TypedBuilderFields
>` in the current 
scope
  --> 
src\layout.rs:81:25
   |
 6 | /     rsx! {
 7 | |         div {
 8 | |             
class: "bg-background 
text-on-surface 
font-body selection:bg
-secondary/30 
h-screen 
overflow-hidden",
...  |
80 | |                
         
active_class: 
"text-[#5D3FD3] 
bg-[#141f38] 
font-bold",
81 | |                
         
inactive_class: 
"text-[#dee5ff]/60 
hover:text-[#dee5ff] 
hover:bg-[#141f38]",
   | |________________
________-^^^^^^^^^^^^^
^
   |
help: there is a 
method `active_class` 
with a similar name
   |
81 -                  
       
inactive_class: 
"text-[#dee5ff]/60 
hover:text-[#dee5ff] 
hover:bg-[#141f38]",
81 +                  
       active_class: 
"text-[#dee5ff]/60 
hover:text-[#dee5ff] 
hover:bg-[#141f38]",
   |

For more information 
about this error, try 
`rustc --explain 
E0599`.
warning: 
`model-checker` (bin 
"model-checker") 
generated 2 warnings
error: could not 
compile 
`model-checker` (bin 
"model-checker") due 
to 5 previous errors; 
2 warnings emitted
